--- a/RunTrack.org
+++ b/RunTrack.org
@@ -199,3 +199,7 @@ prueba
   - Bash Version : 4.3.11(1)-release
   - Atlantis Version : #Atlantis2 Updated to Version 6320
   - Run used :  /usr/local/bin/atlantisMerged -i INIT_VMPA_Jan2015.nc 0 -o outputSETAS.nc -r VMPA_setas_run_fishing_F_Trunk.prm -f VMPA_setas_force_fish_Trunk.prm -p VMPA_setas_physics.prm -b VMPA_setas_biol_fishing_Trunk.prm -h harvest_stripped.prm -s SETasGroupsDem.csv -q SETasFisheries.csv -d SETas_Output_Folder
+  - Commit Githhub : Automatic backup 20180913141630
+** Biomasss Plot
+#+CAPTION: Biomass plot for the simulation 20180913112414
+[[file:/home/demiurgo/Documents/2017/Calibration_SETas/Model/SETas_model_Trunk_Stripped/Calibration/Figures/20180913112414.png]]
